<resources>
    <string name="app_name">Eatsie</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="icon">Icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">Dont have an account ? Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="greeting">Hello, Wakhid</string>
    <string name="search">Search Any Recipe ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account ? Sign in</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="send">SEND</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_title">Profile</string>
    <string name="image_profile">Image Profile</string>
    <string name="profile_username">Username : User</string>
    <string name="profile_email">Email : example@gmail.com</string>
    <string name="logout">LOGOUT</string>
    <string name="favorites_menu">Favorites Menu</string>
    <string name="sate_ayam">Sate Ayam</string>
    <string name="image_card">Image Card</string>
    <string name="open">OPEN</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="icon_fragment_home">Icon Fragment Home</string>
    <string name="hello">Hello, User</string>
    <string name="search_any_recipe">Search Any Recipe ?</string>
    <string name="nusantara">NUSANTARA</string>
    <string name="internasional">INTERNASIONAL</string>
    <string name="dessert">DESSERT</string>
    <string name="appetizer">APPETIZER</string>
    <string name="menu_nusantara_title">Menu Nusantara</string>
    <string name="rendang">Rendang</string>
    <string name="pempek">Pempek</string>
    <string name="soto_madura">Soto Madura</string>
    <string name="back">BACK</string>
</resources>