<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvHeadingRegister"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:background="@color/orange"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="85dp" />

    <ImageView
        android:id="@+id/iconHeadingLogin"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/icon" />

    <LinearLayout
        android:id="@+id/llFormInputRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tvHeadingRegister">

        <EditText
            android:id="@+id/etInputUsernameRegister"
            android:layout_width="337dp"
            android:layout_height="57dp"
            android:background="@drawable/input"
            android:hint="@string/username"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:inputType="text"
            android:elevation="10dp"
            android:layout_marginTop="27dp"
            android:autofillHints="username"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etInputEmailRegister"
            android:layout_width="337dp"
            android:layout_height="57dp"
            android:background="@drawable/input"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:inputType="textEmailAddress"
            android:elevation="10dp"
            android:layout_marginTop="9dp"
            android:autofillHints="emailAddress"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etInputPasswordRegister"
            android:layout_width="337dp"
            android:layout_height="57dp"
            android:background="@drawable/input"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:inputType="textPassword"
            android:elevation="10dp"
            android:layout_marginTop="9dp"
            android:autofillHints="password"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etInputConfirmPasswordRegister"
            android:layout_width="337dp"
            android:layout_height="57dp"
            android:background="@drawable/input"
            android:hint="@string/confirm_password"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:inputType="textPassword"
            android:elevation="10dp"
            android:layout_marginTop="9dp"
            android:autofillHints="password"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="337dp"
            android:layout_height="57dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/button" />

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlIconRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llFormInputRegister">

        <ImageView
            android:id="@+id/ivIconFacebookLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook"
            android:layout_alignParentStart="true"
            android:layout_marginStart="67dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp" />

        <ImageView
            android:id="@+id/ivIconGoogleLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/google"
            android:contentDescription="@string/google"
            android:layout_marginStart="175dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp" />

        <ImageView
            android:id="@+id/ivIconTwitterLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/twitter"
            android:contentDescription="@string/twitter"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="67dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp" />
    </RelativeLayout>

</RelativeLayout>