<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/tvForgotPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="88dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/etInputEmailForgotPassword"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:background="@drawable/input"
        android:hint="@string/enter_your_email"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:inputType="textEmailAddress"
        android:elevation="10dp"
        android:layout_marginTop="53dp"
        android:autofillHints="emailAddress"
        tools:ignore="RtlSymmetry,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:text="@string/send"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/button" />

    <TextView
        android:id="@+id/tvBackToSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_sign_in"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        android:gravity="center_horizontal"/>

</LinearLayout>